--- a/Application/src/main/res/layout/fragment_camera.xml
+++ b/Application/src/main/res/layout/fragment_camera.xml
@@ -26,11 +26,10 @@
 
     <TextView
         android:id="@+id/detect"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
-        android:layout_alignParentStart="true">
-
-    </TextView>
+        android:layout_alignParentStart="true"
+        android:background="@color/white"/>
 
     <ImageView
         android:id="@+id/detectArea"
@@ -38,94 +37,77 @@
         android:layout_height="@dimen/dp56"
         android:layout_alignParentStart="true"
         android:background="@drawable/frame"
-        android:layout_below="@+id/detect">
-
-    </ImageView>
+        android:layout_below="@+id/detect"/>
 
     <TextView
         android:id="@+id/threshold"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/detectArea">
-
-    </TextView>
+        android:layout_below="@+id/detectArea"
+        android:background="@color/white"/>
 
     <ImageView
         android:id="@+id/thresholdArea"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp56"
-        android:layout_below="@+id/threshold">
-
-    </ImageView>
+        android:layout_below="@+id/threshold"/>
 
     <TextView
         android:id="@+id/range"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/thresholdArea">
-
-    </TextView>
+        android:layout_below="@+id/thresholdArea"
+        android:background="@color/white"/>
 
     <ImageView
         android:id="@+id/rangeArea"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp56"
-        android:layout_below="@+id/range">
-
-    </ImageView>
+        android:layout_below="@+id/range"/>
 
     <TextView
         android:id="@+id/paiImage"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/rangeArea">
-
-    </TextView>
+        android:layout_below="@+id/rangeArea"
+        android:background="@color/white"/>
 
     <FrameLayout
         android:id="@+id/paiImageArea"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp56"
-        android:layout_below="@+id/paiImage">
-
-    </FrameLayout>
+        android:layout_below="@+id/paiImage"/>
 
     <TextView
         android:id="@+id/result"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/paiImageArea">
-
-    </TextView>
+        android:layout_below="@+id/paiImageArea"
+        android:background="@color/white"/>
 
     <FrameLayout
         android:id="@+id/resultArea"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp56"
-        android:layout_below="@+id/result">
-
-    </FrameLayout>
+        android:layout_below="@+id/result"/>
 
     <TextView
         android:id="@+id/sort"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/resultArea">
-
-    </TextView>
+        android:layout_below="@+id/resultArea"
+        android:background="@color/white"/>
 
     <FrameLayout
         android:id="@+id/sortArea"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp56"
-        android:layout_below="@+id/sort">
-
-    </FrameLayout>
+        android:layout_below="@+id/sort"/>
 
     <FrameLayout
         android:id="@+id/control"
@@ -141,6 +123,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/picture" />
+
+        <EditText
+            android:id="@+id/blockSize"
+            android:contentDescription="@string/description_info"
+            style="@android:style/Widget.Material.Light.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|right"
+            android:padding="20dp"
+            android:inputType="number"
+            android:background="@color/white" />
 
     </FrameLayout>
 
